--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.app {
+  /* border: 10px solid rgb(174, 47, 47); */
+  margin: 0 auto;
+  padding: 2rem 0;
+  width: 100%;
+  height: 100vh;
+  /* background-color: rgb(206, 197, 215); */
 }
+h2{
+  margin-left: 2rem;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.post-list {
+  padding: 5rem 2rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  gap: 5rem;
+
 }
 
-.App-link {
-  color: #61dafb;
+.post-item {
+  flex-basis: 25rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.heading{
+  background-color: rgb(30, 30, 64);
+ position: absolute;
+ width: 100%;
+ margin: 0;
+ padding: 0;
+  top:0;
+  color:white
 }
