--- a/react_app/src/App.css
+++ b/react_app/src/App.css
@@ -1,15 +1,17 @@
 .app {
   /* border: 10px solid rgb(174, 47, 47); */
-  margin: 0 auto;
+  margin: 6rem;
   padding: 2rem 0;
   width: 100%;
   height: 100vh;
   /* background-color: rgb(206, 197, 215); */
 }
-h2{
+
+h2 {
   margin-left: 2rem;
 
 }
+
 .post-list {
   padding: 5rem 2rem;
   display: flex;
@@ -21,12 +23,20 @@ h2{
 .post-item {
   flex-basis: 25rem;
 }
-.heading{
+
+.heading {
   background-color: rgb(30, 30, 64);
- position: absolute;
- width: 100%;
- margin: 0;
- padding: 0;
-  top:0;
-  color:white
+  position: absolute;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  top: 0;
+  color: white
+}
+
+.create-post{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  width: 25rem  ;
 }
